# Sufficient-IoT-Application

./: CMakeLists.txt  Kconfig  README.md  README_ZH.md
functional_module/: CMakeLists.txt  README.md
functional_module/bmp180/: CMakeLists.txt  README.md  bmp180.c  bmp180.h
functional_module/data_conversion/: CMakeLists.txt  data_conversion.c  data_conversion.h
functional_module/fifo/: CMakeLists.txt  README.md  mkfifo.c  mkfifo.h
functional_module/hdc1080/: CMakeLists.txt  README.md  hdc1080.c  hdc1080.h
functional_module/lora/: CMakeLists.txt  ESP32_sx1262_LoRaWAN.c  ESP32_sx1262_LoRaWAN.h  board-config.h  board.c  board.h  debug.h  lorawan_spi.h  radio.h  sx1262-board.c  sx1262_gpio.c  sx126x-board.h  sx126x.c  sx126x.h  utilities.h
functional_module/lora/loramac/: Commissioning.h  LoRaMac.c  LoRaMac.h  LoRaMacClassB.c  LoRaMacConfirmQueue.c  LoRaMacCrypto.c  LoRaMacCrypto.h  cmac.c
functional_module/lora/loramac/region/: Region.c  Region.h  RegionAS923.c  RegionAU915.c  RegionCN470.c  RegionCN779.c  RegionCommon.c  RegionEU433.c  RegionEU868.c  RegionEU868.h  RegionIN865.c  RegionKR920.c  RegionUS915-Hybrid.c  RegionUS915.c  RegionUS915.h
functional_module/lora/radio/: radio.c  radio.h
functional_module/lora/time/: delay.h  getTime.h  rtc-board.h  timer.h
hardware_driver/: CMakeLists.txt  README.md
hardware_driver/gpio/: CMakeLists.txt  gpio.c  gpio.h
hardware_driver/i2c/: CMakeLists.txt  i2c.c  i2c.h
hardware_driver/spi/: CMakeLists.txt  spi.c  spi.h
project/: CMakeLists.txt
project/config/: CMakeLists.txt  config.ini  interface.sh
project/config/kconfig_lib/: configini_to_kconfig.sh  kconfig_to_configini.sh
project/main/: CMakeLists.txt  main.c
